# gryphon

./: .gitignore  CMakeLists.txt  README.md  config.example.yaml  gryphon.cpp
